# humble_scrapper_backend

./: Cargo.toml  README.md  tester.sh
backend/src/: main.rs
backend/src/api/: agent.rs  item.rs  mod.rs
backend/src/repository/: db.rs
scraper/: Cargo.toml
scraper/src/: agent.rs  main.rs
src/: main.rs
src/api/: agent.rs  item.rs
src/model/: agent.rs  item.rs  mod.rs
src/repository/: db.rs
