[package]
name = "humble_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
actix-web = "4"
serde = { version = "1.0.197", features = ["derive"]}
uuid = {version = "^0.8", features = ["v4"]}
rusqlite = "0.28.0"
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"]}
derive_more = "^0.99"

